[package]
name = "whatlang_wrapper"
version = "0.1.0"
authors = ["sorrge <sor.rge@gmail.com>"]
edition = "2018"

[lib]
name = "whatlang_wrapper"
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whatlang = "0.7.2"
libc = "0.2"
